# CompanySimulation

./: .gitignore  README.md
kod/: CMakeLists.txt  Makefile  all  firma.cpp  kredyt.hpp  kredyt.hpp.gch  pracownik.hpp  randomy.hpp  test.cpp
kod/include/: config.hpp  firma.hpp  gra.hpp
kod/src/: firma.cpp  gra.cpp  kredyt.cpp  main.cpp  pracownik.cpp
